--- a/index.css
+++ b/index.css
@@ -1,3 +1,11 @@
 * {
     margin: 0;
 }
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+}
